# hunter-game

./: .gitignore  Agents.md  Cargo.toml  Dockerfile  PLAN.md  entrypoint.sh  instructions.txt  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml  server.js  sshd_config  tailwind.config.ts
.opencode/: opencode.db  opencode.db-shm  opencode.db-wal
data/games/: 2af5f27a-ca93-4b9b-b407-e3958904d59f.json  f5cbed8f-d1a7-4bb2-a7f8-cbf2deeae42f.json
docs/: rust-llm-libraries.md
pages/api/: socket.ts
src/: app.rs  instrumentation.node.ts  instrumentation.ts  main.rs  middleware.ts
src/app/: globals.css  layout.tsx  main.tsx  page.tsx
src/app/api/games/: route.ts
src/app/api/games/[id]/: route.ts
src/app/api/games/[id]/message/: route.ts
src/app/api/generate-scenario/: route.ts
src/app/api/socket/: route.ts  socketio.ts  typings.ts
src/app/context/: game_state.tsx
src/app/loading/: client_setup.ts  creation.ts  fal.ts  llm.ts
src/components/: GameScreen.tsx  SetupScreen.tsx  StartScreen.tsx  error-screen.tsx  loading-screen.tsx  login-screen.tsx  main-screen.tsx  you-have-died.tsx  you-have-won.tsx
src/components/ui/: loading.tsx  tabs.tsx
src/data/: monster.txt  players.txt
src/game/: combat.rs  dice.rs  mod.rs  persistence.rs  player.rs  world.rs
src/lib/: ai.ts  dm-agent.ts  openai-service.ts  state.ts  storage.ts  types.ts  utils.ts  websocket-client.ts  websocket-server.ts
src/types/: game.ts
src/ui/: combat_screen.rs  explore_screen.rs  game_over_screen.rs  images.rs  inventory_screen.rs  mod.rs  title_screen.rs
(+4 files in other folders)
