[package]
name = "hunter-game"
version = "0.1.0"
edition = "2024"
description = "A terminal-based interactive text role-playing game"
authors = ["Jakob"]

[dependencies]
# Terminal UI
crossterm = "0.28"

# Image to ASCII art rendering (custom implementation, no problematic deps)
image = { version = "0.25", default-features = false, features = ["png", "gif", "webp"] }

# Serialization for save/load
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Randomization
rand = "0.8"

# Error handling
anyhow = "1.0"
