[package]
name = "hunter-game"
version = "0.1.0"
edition = "2021"
description = "A terminal-based interactive text role-playing game"
authors = ["Jakob"]

[dependencies]
# Terminal UI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"

# Serialization for save/load
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Randomization
rand = "0.8"

# Error handling
anyhow = "1.0"

# Timestamps for saves
chrono = { version = "0.4", features = ["serde"] }
